# hng-stage-2

./: .gitignore  Dockerfile  README.md  TRADEOFFS.md  docker-compose.yml  pyproject.toml
app/: api.py  clients.py  config.py  database.py  main.py  models.py  parser.py  service.py
tests/: conftest.py  test_parser.py  test_profiles.py
