[project]
name = "hng-stage-1"
version = "0.1.0"
description = "Backend Task for HNG Stage 1"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "sqlalchemy>=2.0.49",
    "uuid6>=2025.0.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
